starting hard